# serializer version: 1
# name: TestEventsPredicatePushdownTransform.test_events_with_alias_and_session_join
  '''
  
  SELECT e.event AS event, e__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS e LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS e__session ON equals(toUInt128(accurateCastOrNull(e.`$session_id`, %(hogql_val_7)s)), e__session.session_id_v7) 
  WHERE greaterOrEquals(toTimeZone(e.timestamp, %(hogql_val_8)s), %(hogql_val_9)s) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_with_session_join_and_timestamp_filter
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_7)s)), events__session.session_id_v7) 
  WHERE greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_8)s), %(hogql_val_9)s) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_without_join_no_pushdown
  '''
  
  SELECT events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_0)s), %(hogql_val_1)s)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_without_where_no_pushdown
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_0)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_1)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_2)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE equals(raw_sessions.team_id, 420) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_3)s)), events__session.session_id_v7) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_multiple_pushable_predicates
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), equals(events.team_id, 420), and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s), equals(events.event, %(hogql_val_3)s)))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_4)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_5)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_6)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_7)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_8)s)), events__session.session_id_v7) 
  WHERE and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_9)s), %(hogql_val_10)s), equals(events.event, %(hogql_val_11)s)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_session_duration_filter_stays_in_outer_where
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
  SELECT events.`$session_id` AS `$session_id`, events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp 
  FROM events 
  WHERE and(equals(events.team_id, 420), equals(events.team_id, 420), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))) AS events LEFT JOIN (
  SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_7)s)), events__session.session_id_v7) 
  WHERE and(greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_8)s), %(hogql_val_9)s), ifNull(greater(events__session.`$session_duration`, 0), 0)) 
  LIMIT 50000
  '''
# ---
